fixed card stretching issue on ios

--- a/frontend/src/app/pages/game/game.component.css
+++ b/frontend/src/app/pages/game/game.component.css
@@ -28,3 +28,8 @@
   font-size: 18px;
   font-weight: 500;
 }
+
+.card img {
+  max-width: 100%;
+  height:auto;
+}
